--- a/arch/arm/boot/dts/qcom/sdxpoorwills-pinctrl.dtsi
+++ b/arch/arm/boot/dts/qcom/sdxpoorwills-pinctrl.dtsi
@@ -1491,7 +1491,7 @@
 				config {
 					pins = "gpio17";
 					drive-strength = <2>;	/* 2 mA */
-					bias-pull-down;		/* PULL DOWN */
+					bias-disable;		/* NO PULL */
 					input-enable;
 				};
 			};
