drivers: qcom: Add support for subsystem backup and restore
Remote subsystem can backup-restore data with the help of HLOS.
For this requirement, add a helper driver in the kernel.

This driver implements the QMI client for interaction with the
remote subsystem. Upon a backup/restore notification, this driver
allocates a shared buffer and locks exclusively for the subsystem
to use. Upon completion of backup/restore, the shared buffer is
freed.

Userspace can read/write the backup image using /dev interface
exposed by this driver.

Change-Id: I137d2ca331f39af3ac9d5694a2660c637de35c5a
Signed-off-by: Shreyas K K <shrekk@codeaurora.org>

--- a/drivers/soc/qcom/Kconfig
+++ b/drivers/soc/qcom/Kconfig
@@ -965,6 +965,15 @@ config MSM_BAM_DMUX
 
 source "drivers/soc/qcom/wcnss/Kconfig"
 
+config SUBSYS_BACKUP
+	bool "Subsystem Backup-Restore driver"
+	help
+	  This driver implements the QMI client for interaction with the
+	  remote subsystem. Upon a backup/restore notification, this driver
+	  allocates a shared buffer and locks exclusively for the subsystem
+	  to use. Upon completion of backup/restore, the shared buffer is
+	  freed.
+
 config BIG_CLUSTER_MIN_FREQ_ADJUST
 	bool "Adjust BIG cluster min frequency based on power collapse state"
 	default n
