--- a/arch/arm/configs/sa415m-perf_defconfig
+++ b/arch/arm/configs/sa415m-perf_defconfig
@@ -468,3 +468,4 @@ CONFIG_CRYPTO_DEV_QCEDEV=m
 # CONFIG_XZ_DEC_POWERPC is not set
 # CONFIG_XZ_DEC_IA64 is not set
 CONFIG_QMI_ENCDEC=y
+CONFIG_QCOM_SECURE_BUFFER=y
