--- a/arch/arm/boot/dts/qcom/sdxpoorwills.dtsi
+++ b/arch/arm/boot/dts/qcom/sdxpoorwills.dtsi
@@ -96,6 +96,12 @@
 			size = <0x400000>;
 			status = "disabled";
 		};
+
+		subsys_backup_region: subsys_backup_region {
+			compatible = "shared-dma-pool";
+			reusable;
+			size = <0xC00000>;
+		};
 	};
 
 	cpus {
@@ -1336,6 +1342,12 @@
 		status = "disabled";
 		vdd-wlan-xtal-min = <1704000>;
 		vdd-wlan-xtal-max = <1704000>;
+	};
+
+	subsys_backup: qcom,subsys-backup {
+		compatible = "qcom,subsys-backup";
+		qcom,buf-size = <0x600000>;
+		memory-region = <&subsys_backup_region>;
 	};
 };
 
