defconfig: sa415m: Enable subsystem backup support
Enable subsystem backup support to allow remote subsystem
backup on SA415.

Change-Id: I4b5f5cd036f00ebb4796d77229947f7154df0211
Signed-off-by: Shreyas K K <shrekk@codeaurora.org>

--- a/arch/arm/configs/sa415m-perf_defconfig
+++ b/arch/arm/configs/sa415m-perf_defconfig
@@ -469,3 +469,4 @@ CONFIG_CRYPTO_DEV_QCEDEV=m
 # CONFIG_XZ_DEC_IA64 is not set
 CONFIG_QMI_ENCDEC=y
 CONFIG_QCOM_SECURE_BUFFER=y
+CONFIG_SUBSYS_BACKUP=y
