--- a/arch/arm64/boot/dts/qcom/sxr1130-arglass.dtsi
+++ b/arch/arm64/boot/dts/qcom/sxr1130-arglass.dtsi
@@ -1,4 +1,4 @@
-/* Copyright (c) 2020, The Linux Foundation. All rights reserved.
+/* Copyright (c) 2020-2021, The Linux Foundation. All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -307,6 +307,10 @@
 			qcom,init-mode = <RPMH_REGULATOR_MODE_HPM>;
 		};
 	};
+
+	qcom,ion-heap@22 { /* MDSP HEAP */
+		status = "disabled";
+	};
 };
 
 &dsi_dual_arglass_boe_dual_1080p_video {
@@ -534,3 +538,14 @@
 		};
 	};
 };
+
+&mdsp_mem {
+	status = "disabled";
+};
+
+/ {
+	qcom,msm-mdsprpc-mem {
+		status = "disabled";
+	};
+};
+
