--- a/arch/arm/boot/dts/qcom/sa415m-ccard-usb-ep.dts
+++ b/arch/arm/boot/dts/qcom/sa415m-ccard-usb-ep.dts
@@ -1,4 +1,4 @@
-/* Copyright (c) 2019-2020, The Linux Foundation. All rights reserved.
+/* Copyright (c) 2019-2021, The Linux Foundation. All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -45,5 +45,11 @@
 };
 
 &sdx_ext_ipc {
+	qcom,status-in-gpio = <&tlmm 95 0x00>;
+	qcom,status-out-gpio = <&tlmm 36 0x00>;
+	qcom,status-out2-gpio = <&tlmm 88 0x00>;
+	qcom,wakeup-gpio-in = <&tlmm 87 0x00>;
+	qcom,wakeup-gpio-out = <&tlmm 22 0x00>;
 	qcom,default-policy-nop;
+	status = "okay";
 };
