--- a/arch/arm/boot/dts/qcom/sa415m-ccard.dtsi
+++ b/arch/arm/boot/dts/qcom/sa415m-ccard.dtsi
@@ -1,4 +1,4 @@
-/* Copyright (c) 2019-2020, The Linux Foundation. All rights reserved.
+/* Copyright (c) 2019-2021, The Linux Foundation. All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -167,14 +167,9 @@
 
 	sdx_ext_ipc: qcom,sdx_ext_ipc {
 		compatible = "qcom,sdx-ext-ipc";
-		qcom,status-in-gpio = <&tlmm 95 0x00>;
-		qcom,status-out-gpio = <&tlmm 36 0x00>;
-		qcom,status-out2-gpio = <&tlmm 88 0x00>;
-		qcom,wakeup-gpio-in = <&tlmm 87 0x00>;
-		qcom,wakeup-gpio-out = <&tlmm 22 0x00>;
 		pinctrl-names = "default";
 		pinctrl-0 = <&sdx_ext_ipc_gpio_default>;
-		status = "okay";
+		status = "disabled";
 	};
 
 	wlan_ctrl1: wlan_ctrl1 {
