--- a/arch/arm/configs/sa415m_defconfig
+++ b/arch/arm/configs/sa415m_defconfig
@@ -180,6 +180,7 @@ CONFIG_RFKILL=y
 CONFIG_IPC_ROUTER=y
 CONFIG_IPC_ROUTER_SECURITY=y
 CONFIG_IPC_ROUTER_NODE_ID=2
+CONFIG_IPC_ROUTER_WAKEUP_MS=500
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
 CONFIG_REGMAP_ALLOW_WRITE_DEBUGFS=y
