--- a/arch/arm/boot/dts/qcom/Makefile
+++ b/arch/arm/boot/dts/qcom/Makefile
@@ -19,8 +19,10 @@ dtb-$(CONFIG_ARCH_SDXPOORWILLS) += sdxpoorwills-rumi.dtb \
 	sdxpoorwills-v2-pcie-ep-mtp.dtb \
 	sa415m-ttp.dtb \
 	sa415m-ccard.dtb \
+	sa415m-ccard-ga.dtb \
 	sa415m-ccard-pcie-ep.dtb \
 	sa415m-ccard-usb-ep.dtb \
+	sa415m-ccard-usb-ep-ga.dtb \
 	sa415m-ttp-pcie-ep.dtb \
 	sa415m-ttp-usb-ep.dtb \
 	sa415m-mtp-256.dtb \
