ARM: dts: msm: Enable Minidump
Add dload_type node to enable minidump.

Change-Id: I4f706fbd38848eea8488785b4232725a647e8938
Signed-off-by: Akshay Adiga <quic_aadiga@quicinc.com>

--- a/arch/arm/boot/dts/qcom/sa415m-ttp.dtsi
+++ b/arch/arm/boot/dts/qcom/sa415m-ttp.dtsi
@@ -331,6 +331,14 @@
 			};
 		};
 	};
+
+	qcom,msm-imem@1468B000 {
+		dload_type@1c {
+			compatible = "qcom,msm-imem-dload-type";
+			reg = <0x1c 4>;
+		};
+	};
+
 };
 
 &ipa_hw {
