--- a/arch/arm/boot/dts/qcom/sdxpoorwills.dtsi
+++ b/arch/arm/boot/dts/qcom/sdxpoorwills.dtsi
@@ -1422,7 +1422,7 @@
 		emac_emb_smmu: emac_emb_smmu {
 			compatible = "qcom,emac-smmu-embedded";
 			iommus = <&apps_smmu 0x220 0xf>;
-			qcom,iova-mapping = <0x80000000 0x40000000>;
+			qcom,iova-mapping = <0x80000000 0x0FE40000>;
 		};
 	};
 
