--- a/drivers/misc/Makefile
+++ b/drivers/misc/Makefile
@@ -65,6 +65,7 @@ obj-$(CONFIG_MEMORY_STATE_TIME)	+= memory_state_time.o
 obj-$(CONFIG_QCOM_XR_SMRTVWR_MISC) += qcom-xr-smrtvwr-misc.o
 obj-$(CONFIG_TUSB1064_XR_MISC) += tusb1064.o
 obj-$(CONFIG_VXR200_XR_MISC) += vxr7200.o
+obj-$(CONFIG_TZ_NAND_PROBE) += tz_nand_probe.o
 
 
 lkdtm-$(CONFIG_LKDTM)		+= lkdtm_core.o
