ARM: dts: msm: Add minidump ID for modem subsystem for sdxpoorwills
Add minidump ID for modem subsystem for sdxproorwills platform.

Change-Id: I52db3d50691f14aa524d26541facb067795ac00c
Signed-off-by: Akshay Adiga <quic_aadiga@quicinc.com>

--- a/arch/arm/boot/dts/qcom/sdxpoorwills.dtsi
+++ b/arch/arm/boot/dts/qcom/sdxpoorwills.dtsi
@@ -845,6 +845,7 @@
 		qcom,ssctl-instance-id = <0x22>;
 		qcom,firmware-name = "modem";
 		memory-region = <&mss_mem>;
+		qcom,minidump-id = <3>;
 		status = "ok";
 
 		/* GPIO inputs from mss */
