ARM: dts: msm: Change offset of dload_type cookie
Based on inputs from XBL teams changing dload_type cookie offset.

Change-Id: Ib68c9c64d352152066595b7c6094b8f1f5311e82
Signed-off-by: Akshay Adiga <quic_aadiga@quicinc.com>

--- a/arch/arm/boot/dts/qcom/sa415m-ttp.dtsi
+++ b/arch/arm/boot/dts/qcom/sa415m-ttp.dtsi
@@ -335,7 +335,7 @@
 	qcom,msm-imem@1468B000 {
 		dload_type@1c {
 			compatible = "qcom,msm-imem-dload-type";
-			reg = <0x1c 4>;
+			reg = <0x18 4>;
 		};
 	};
 
