--- a/arch/arm/boot/dts/qcom/sdxpoorwills-thermal.dtsi
+++ b/arch/arm/boot/dts/qcom/sdxpoorwills-thermal.dtsi
@@ -1,4 +1,5 @@
 /* Copyright (c) 2017-2018, The Linux Foundation. All rights reserved.
+ * Copyright (c) 2022 Qualcomm Innovation Center, Inc. All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -373,6 +374,14 @@
 		polling-delay = <0>;
 		thermal-sensors = <&pmxpoorwills_vadc 0x4c>;
 		thermal-governor = "user_space";
+		wake-capable-sensor;
+		trips {
+			active-config0 {
+				temperature = <125000>;
+				hysteresis = <1000>;
+				type = "passive";
+			};
+		};
 	};
 
 	pa-therm1-adc {
@@ -380,6 +389,14 @@
 		polling-delay = <0>;
 		thermal-sensors = <&pmxpoorwills_vadc 0x4d>;
 		thermal-governor = "user_space";
+		wake-capable-sensor;
+		trips {
+			active-config0 {
+				temperature = <125000>;
+				hysteresis = <1000>;
+				type = "passive";
+			};
+		};
 	};
 
 	pa-therm2-adc {
@@ -387,6 +404,14 @@
 		polling-delay = <0>;
 		thermal-sensors = <&pmxpoorwills_vadc 0x4e>;
 		thermal-governor = "user_space";
+		wake-capable-sensor;
+		trips {
+			active-config0 {
+				temperature = <125000>;
+				hysteresis = <1000>;
+				type = "passive";
+			};
+		};
 	};
 
 	mdm-case-therm-adc {
@@ -394,6 +419,14 @@
 		polling-delay = <0>;
 		thermal-sensors = <&pmxpoorwills_vadc 0x4f>;
 		thermal-governor = "user_space";
+		wake-capable-sensor;
+		trips {
+			active-config0 {
+				temperature = <125000>;
+				hysteresis = <1000>;
+				type = "passive";
+			};
+		};
 	};
 
 	ambient-therm-adc {
@@ -401,5 +434,13 @@
 		polling-delay = <0>;
 		thermal-sensors = <&pmxpoorwills_vadc 0x52>;
 		thermal-governor = "user_space";
+		wake-capable-sensor;
+		trips {
+			active-config0 {
+				temperature = <125000>;
+				hysteresis = <1000>;
+				type = "passive";
+			};
+		};
 	};
 };
