ARM: dts: msm: Disable L1 and L1ss for RC0 on SA415
Some targets doesn't support PCIe L1 and L1ss states.
Enabling the states can lead to erratic behavior in those devices.
This change disables the L1 and L1ss ASPM states for ccard SA415 platform.

Change-Id: Ic79c8ec4586fbf6575633638604f3b1f6d962bf6
Signed-off-by: Naga Rashmi Ayiluri <quic_nayiluri@quicinc.com>

--- a/arch/arm/boot/dts/qcom/sa415m-ccard.dtsi
+++ b/arch/arm/boot/dts/qcom/sa415m-ccard.dtsi
@@ -487,3 +487,8 @@
 	regulator-min-microvolt = <1800000>;
 	regulator-max-microvolt = <1800000>;
 };
+
+&pcie0 {
+	/delete-property/ qcom,l1-supported;
+	/delete-property/ qcom,l1ss-supported;
+};
