ARM: dts: msm: Set DP output as primary
Enable DP output as primary, and disable DSI panel.
Remove the reservation of Layer mixer for primary display.

Change-Id: Ib0a2d1f6c9abd2a5084a2b4870ec50ce50237611
Signed-off-by: Yu Wu <quic_zwy@quicinc.com>

--- a/arch/arm64/boot/dts/qcom/sdm845-v2-mtp-overlay.dts
+++ b/arch/arm64/boot/dts/qcom/sdm845-v2-mtp-overlay.dts
@@ -1,4 +1,5 @@
 /* Copyright (c) 2017, The Linux Foundation. All rights reserved.
+ * Copyright (c) 2022 Qualcomm Innovation Center, Inc. All rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 and
@@ -28,4 +29,17 @@
 	compatible = "qcom,sdm845-mtp", "qcom,sdm845", "qcom,mtp";
 	qcom,msm-id = <321 0x20000>;
 	qcom,board-id = <8 0>;
+};
+
+&dsi_nt35597_truly_dsc_cmd_display {
+	/delete-property/ qcom,dsi-display-active;
+};
+
+&sde_dp {
+	qcom,display-type = "primary";
+};
+
+&mdss_mdp {
+	qcom,sde-mixer-display-pref = "none", "none", "none",
+			"none", "none", "none";
 };
