--- a/arch/arm/boot/dts/qcom/sa415m-ccard.dtsi
+++ b/arch/arm/boot/dts/qcom/sa415m-ccard.dtsi
@@ -277,6 +277,7 @@
 
 			qcom,wlan-ramdump-dynamic = <0x400000>;
 			mhi,max-channels = <30>;
+			mhi,buffer-len = <0x8000>;
 			mhi,timeout = <10000>;
 			qcom,smmu-s1-enable;
 			mhi_channels {
@@ -387,6 +388,7 @@
 
 			qcom,wlan-ramdump-dynamic = <0x300000>;
 			mhi,max-channels = <30>;
+			mhi,buffer-len = <0x8000>;
 			mhi,timeout = <10000>;
 			mhi,ee = <0x3>, <0x4>;
 			mhi,ee-names = "SBL", "RDDM";
