ARM: dts: qcom: Enable support for zeorc handling in resume for sa415m
Enable zeroc handling in resume callback support for sa415m.
Monitor only aoss sensor for cold temperature vdd restriction monitor.

Change-Id: I0cee0ff2fddfc5161e41090b3115fbfacb0ad86f
Signed-off-by: Priyansh Jain <quic_priyjain@quicinc.com>

--- a/arch/arm/boot/dts/qcom/sa415m-ttp.dtsi
+++ b/arch/arm/boot/dts/qcom/sa415m-ttp.dtsi
@@ -339,6 +339,23 @@
 		};
 	};
 
+	tsens@c222000 {
+		reg = <0xc222000 0x20>,
+		      <0xc263000 0x1ff>;
+		ltvr-resume-trigger;
+		ltvr-sensor-id = <0>;
+		ltvr-trip-temp-delta = <2000>;
+		ltvr-clear-temp-delta = <1000>;
+	};
+};
+
+&thermal_zones {
+	/delete-node/ aoss-usr;
+	/delete-node/ mdm-q6-lowf;
+	/delete-node/ ddrss-lowf;
+	/delete-node/ cpu-lowf;
+	/delete-node/ mdm-core-lowf;
+	/delete-node/ mdm-vpe-lowf;
 };
 
 &ipa_hw {
