--- a/arch/arm/boot/dts/qcom/sa415m-ccard.dtsi
+++ b/arch/arm/boot/dts/qcom/sa415m-ccard.dtsi
@@ -496,6 +496,24 @@
 		/* PWR_CTR2_VDD_1P8 */
 		qca,bt-chip-pwd-supply = <&wlan_ctrl2>;
 	};
+
+	tsens@c222000 {
+		reg = <0xc222000 0x20>,
+		      <0xc263000 0x1ff>;
+		ltvr-resume-trigger;
+		ltvr-sensor-id = <0>;
+		ltvr-trip-temp-delta = <2000>;
+		ltvr-clear-temp-delta = <1000>;
+	};
+};
+
+&thermal_zones {
+	/delete-node/ aoss-usr;
+	/delete-node/ mdm-q6-lowf;
+	/delete-node/ ddrss-lowf;
+	/delete-node/ cpu-lowf;
+	/delete-node/ mdm-core-lowf;
+	/delete-node/ mdm-vpe-lowf;
 };
 
 &emac_hw {
