ARM: dts: qcom: Disable TSENS trips for non zeroc sensors during suspend
Disable TSENS high and low trip thresholds for all sensors except
cold temperature vdd restriction monitoring sensor for sa415.

Change-Id: Ib61609b90fd5f397589dfa5dc0181c6dd9dc4181
Signed-off-by: Priyansh Jain <quic_priyjain@quicinc.com>

--- a/arch/arm/boot/dts/qcom/sa415m-ccard.dtsi
+++ b/arch/arm/boot/dts/qcom/sa415m-ccard.dtsi
@@ -504,6 +504,7 @@
 		ltvr-sensor-id = <0>;
 		ltvr-trip-temp-delta = <2000>;
 		ltvr-clear-temp-delta = <1000>;
+		tm-disable-on-suspend;
 	};
 };
 
