--- a/arch/arm/boot/dts/qcom/sa415m-ttp.dtsi
+++ b/arch/arm/boot/dts/qcom/sa415m-ttp.dtsi
@@ -346,6 +346,7 @@
 		ltvr-sensor-id = <0>;
 		ltvr-trip-temp-delta = <2000>;
 		ltvr-clear-temp-delta = <1000>;
+		tm-disable-on-suspend;
 	};
 };
 
